# directChillFoam

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/conda-envs/: docs_env.yaml
.github/workflows/: cmake.yml  draft-pdf.yml  sphinx_docs_to_gh_pages.yaml  wmake.yml
_sources/: index.rst.txt
_sources/solver/: directChillFoam.rst.txt
_sources/src/: ThermophysicalTransportModels.rst.txt  index.rst.txt
_sources/tutorials/: Subroto2021.rst.txt  index.rst.txt  modules.rst.txt
_static/: alabaster.css  documentation_options.js
applications/solvers/heatTransfer/directChillFoam/: UEqn.H  createFieldRefs.H  createFields.H  directChillFoam.C  pEqn.H  thermoLoop.H
applications/solvers/heatTransfer/directChillFoam/Make/: files  options
applications/solvers/heatTransfer/directChillFoam/multicomponentAlloy/: multicomponentAlloy.H
docs/: .gitignore  Doxyfile  doxyFilter  doxyFilter.sed
docs/source/: conf.py  index.rst
docs/source/solver/: directChillFoam.rst
docs/source/src/: ThermophysicalTransportModels.rst  fvConstraints.rst  fvModels.rst  multicomponentAlloy.rst  soluteModel.rst
docs/source/tutorials/: Lebon2020.rst  Subroto2021.rst  Vreeman2002.rst  modules.rst
doxygen/: .gitignore  Doxyfile  Makefile
paper/: paper.bib  paper.md
solver/: directChillFoam.html
src/: ThermophysicalTransportModels.html  fvConstraints.html  fvModels.html  index.html  multicomponentAlloy.html  soluteModel.html
src/ThermophysicalTransportModels/Make/: files  options
src/ThermophysicalTransportModels/derivedFvPatchFields/mouldHTC/: mouldHTCFvPatchScalarField.C  mouldHTCFvPatchScalarField.H
src/ThermophysicalTransportModels/derivedFvPatchFields/waterFilmHTC/: waterFilmHTCFvPatchScalarField.C  waterFilmHTCFvPatchScalarField.H
src/TurbulenceModels/compressible/Make/: files  options
src/fvConstraints/Make/: files  options
src/fvConstraints/limitSolute/: limitSolute.C  limitSolute.H  soluteModel.H
src/fvModels/Make/: files  options
src/fvModels/derived/mushyZoneSource/: multicomponentAlloy.C  multicomponentAlloy.H  mushyZoneSource.C  mushyZoneSource.H  mushyZoneSourceTemplates.C  soluteModel.C
src/fvOptions/Make/: files  options
src/fvOptions/sources/derived/mushyZoneSource/: mushyZoneSource.C  mushyZoneSource.H  mushyZoneSourceIO.C  mushyZoneSourceTemplates.C
src/thermophysicalModels/basic/: tableThermos.C
src/thermophysicalModels/basic/Make/: files  options
src/thermophysicalModels/specie/: tableSpecie.C
src/thermophysicalModels/specie/Make/: files  options
src/thermophysicalModels/specie/equationOfState/table/: table.C  table.H  tableI.H
src/thermophysicalModels/specie/thermo/table/: tableThermo.C  tableThermo.H  tableThermoI.H
src/thermophysicalModels/specie/transport/table/: tableTransport.C  tableTransport.H  tableTransportI.H
tests/: .gitignore  Allclean  Alltest  test_libs.py
tests/ThermophysicalTransportModels/mouldHTC/: test_mouldHTC.C
tests/ThermophysicalTransportModels/mouldHTC/Make/: files
tests/ThermophysicalTransportModels/mouldHTC/case/: .gitignore  Allclean  Allrun
tests/ThermophysicalTransportModels/mouldHTC/case/0/: T  p  p_rgh
tests/ThermophysicalTransportModels/mouldHTC/case/system/: controlDict
tests/ThermophysicalTransportModels/waterFilmHTC/: test_waterFilmHTC.C
tests/ThermophysicalTransportModels/waterFilmHTC/Make/: files  options
tests/ThermophysicalTransportModels/waterFilmHTC/case/: .gitignore  Allrun
tests/ThermophysicalTransportModels/waterFilmHTC/case/0/: C.Cu  T  U
tests/ThermophysicalTransportModels/waterFilmHTC/case/constant/: fvModels  tStar
tests/ThermophysicalTransportModels/waterFilmHTC/case/system/: controlDict
tests/fvConstraints/: test_limitSolute.C
tests/fvConstraints/Make/: files
tests/fvConstraints/case/: .gitignore  Allrun
tests/fvConstraints/case/0/: T  U  melt1_alpha1
tests/fvConstraints/case/constant/: thermophysicalProperties
tests/fvConstraints/case/system/: controlDict  fvConstraints
tests/fvModels/: test_mushyZoneSource.C
tests/fvModels/Make/: files  options
tests/fvModels/case/: .gitignore  Allrun
tests/fvModels/case/0/: C.Cu  T  Us  p  p_rgh
tests/fvModels/case/constant/: soluteProperties
tests/fvModels/case/system/: controlDict
tests/multicomponentAlloy/: test_multicomponentAlloy.C
tests/multicomponentAlloy/Make/: files  options
tests/multicomponentAlloy/case/: .gitignore  Allrun
tests/multicomponentAlloy/case/0/: melt1_alpha1
tests/multicomponentAlloy/case/system/: controlDict  fvSchemes
tests/soluteModel/: createFields.H  test_soluteModel.C
tests/soluteModel/Make/: files  options
tests/soluteModel/case/: .gitignore  Allrun
tests/soluteModel/case/constant/: transportProperties
tests/soluteModel/case/system/: controlDict
tutorials/: Lebon2020.html  Subroto2021.html  Vreeman2002.html  index.html  modules.html
tutorials/heatTransfer/directChillFoam/Lebon2020/: Allrun  convert_vtk.py  plot_line.py  plot_sump.py
tutorials/heatTransfer/directChillFoam/Lebon2020/0/: C.Mg  C.Si  T.orig  U  Us  melt1_alpha1.orig  p  p_rgh
tutorials/heatTransfer/directChillFoam/Lebon2020/constant/: HTC_T  HTC_Tw  fvModels  soluteProperties  tStar  thermophysicalProperties  transportProperties
tutorials/heatTransfer/directChillFoam/Lebon2020/system/: blockMeshDict  controlDict  cylinder.py  decomposeParDict  fvSchemes  (+3 more)
tutorials/heatTransfer/directChillFoam/Subroto2021/: Allrun  Allrun.pre  generate_pvd.py  plot_line.py  plot_sump.py  write_htc.py
tutorials/heatTransfer/directChillFoam/Subroto2021/test/: CMakeLists.txt  README.md  test_temperatures.cpp  x0mm_T.xy  x325mm_T.xy  x62mm_T.xy
tutorials/heatTransfer/directChillFoam/Vreeman2002/: Allrun  Allrun.pre  convert_vtk.py  generate_pvd.py  plot_line.py  plot_sump.py  write_htc.py
(+79 files in other folders)
